fixed nav on iOS devices

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3620,6 +3620,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar-fixed-top {
   top: 0;
+  z-index:9001;
 }
 .navbar-fixed-top .navbar-inner,
 .navbar-static-top .navbar-inner {
